# hackathon-fintech-soma

AP2/: .gitignore  GOOGLE-ADK-LOCAL.md  QUICK-REFERENCE-ADK.md  pyproject.toml  switch-adk.sh
AP2/google-adk-local/: README.md  pyproject.toml
AP2/google-adk-local/google/: __init__.py
AP2/google-adk-local/google/adk/cli/browser/: index.html  main-W7QZBYAR.js
AP2/samples/python/: pyproject.toml
AP2/samples/python/scenarios/a2a/human-present/cards/: run.sh
AP2/samples/python/src/roles/merchant_agent/: bestbuy_client.py  storage.py
AP2/samples/python/src/roles/merchant_agent/sub_agents/: catalog_agent.py
AP2/samples/python/src/roles/shopping_agent/subagents/shopper/: agent.py  tools.py
